--- a/src/SidebarChats.css
+++ b/src/SidebarChats.css
@@ -3,6 +3,7 @@
     padding: 20px;
     cursor: pointer;
     border-bottom: 1px solid #f6f6f6;
+    
 }
 .chats:hover{
     background-color: #ebebeb;
@@ -13,4 +14,16 @@
 }
 .chat-info{
     margin-left: 15px;
+    margin-right: 20px;
+}
+.link{
+    text-decoration: none !important;
+    color: black;
+}
+.empty-array{
+    color:red;  
+    font-family: 'Times New Roman', Times, serif;
+}
+.badge{
+    font-size: 100px !important;
 }
