--- a/src/MainChat.css
+++ b/src/MainChat.css
@@ -68,23 +68,50 @@
     left: -17px;
 }
 
+.message-sender{
+    position: relative;
+    margin-left: auto;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color:purple;
+    color:white;
+    width: fit-content;
+    height: 50px;
+    text-align: left;
+    font: 400 .9em 'Open Sans', sans-serif;
+    border: 1px solid purple;
+    border-radius: 10px;
+}
+
+.message-sender:before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 17px solid purple;
+    border-left: 16px solid transparent;
+    border-right: 16px solid transparent;
+    top: -1px;
+    left: -17px;
+}
+
 .username{
     position: absolute;
     top:-1px;
     padding-top: 2px;
      font-size:small;
-     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-family: 'Times New Roman', Times, serif;
 }
 .time-stamp{
     margin-left: 10px;
-    font-size: xx-small;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: smaller;
+    font-family: 'Times New Roman', Times, serif;
 }
 .chat-message:hover{
     background-color: rgb(0, 17, 255);
-    color: white;
+    color:white;
     transform: scale(1.08);
-    opacity: 1;
+    opacity:1;  
 }
 .message-footer{
     display: flex;
@@ -94,22 +121,34 @@
     border-top: 1px solid lightgray;
 }
 .message-footer >form{
-    display: flex;
-    flex: 1;
+    display:flex;
+    flex:1
 }
 .message-footer >form >input{
-    flex: 1;;
+    flex:1;
     padding: 6px;
     border-radius: 15px;
-    outline-width: 0px;
-    border: none;
+    outline-width: 0;
+    border:none
 }
-.message-footer >form > button{
-    border: 1px solid green;
-    border-radius: 10px;
-    margin: 5px;
-    outline-width: 0px;
-    cursor: pointer;
-    color: green;
-    padding: 10px;
+.message-footer >form >button{
+   border: 1px solid green;
+   border-radius: 10px;
+   margin: 5px;
+  outline-width: 0;
+  color: green;
+  cursor: pointer;
+  padding: 10px;
+}
+.dialogue{
+    margin-left:1200px !important;
+   top: 10px !important;
+}
+.no-lastseen{
+    color: red;
+    font-family: 'Times New Roman', Times, serif;
+}
+.last-seen{
+    color:green;
+    font-family: 'Times New Roman', Times, serif;
 }
